--- a/login.html
+++ b/login.html
@@ -27,6 +27,9 @@
                 </div>
                 <button type="submit" class="submit-btn">تسجيل الدخول</button>
             </form>
+            <p style="text-align: center; margin-top: 15px;">
+                ليس لديك حساب؟ <a href="signup.html" class="signup-link">إنشاء حساب</a>
+            </p>
         </div>
     </div>
 
