--- a/signup.html
+++ b/signup.html
@@ -20,8 +20,11 @@
                     <input type="text" id="fullName" name="fullName" required>
                 </div>
                 <div class="input-group">
-                    <label for="studentCode">كود الطالب</label>
-                    <input type="text" id="studentCode" name="studentCode" required>
+                    <label for="studentCode">كود الطالب (STU + 3 أرقام)</label>
+                    <div style="display: flex; align-items: center;">
+                        <span style="padding: 10px; background: #d4af37; color: #1a2526; border-radius: 5px 0 0 5px;">STU</span>
+                        <input type="text" id="studentCode" name="studentCode" pattern="\d{3}" maxlength="3" required style="border-radius: 0 5px 5px 0; flex: 1;">
+                    </div>
                 </div>
                 <div class="input-group">
                     <label for="email">البريد الإلكتروني</label>
@@ -38,6 +41,10 @@
                 <div class="input-group">
                     <label for="address">العنوان</label>
                     <input type="text" id="address" name="address" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">كلمة المرور</label>
+                    <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit" class="submit-btn">إنشاء الحساب</button>
                 <p style="text-align: center; margin-top: 15px;">
