--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,11 @@
                     <input type="text" id="fullName" name="fullName" required>
                 </div>
                 <div class="input-group">
+                    <label for="username">اسم المستخدم</label>
+                    <input type="text" id="username" name="username" required>
+                    <span id="username-availability" style="font-size: 0.8em; color: #dc3545; display: none;"></span>
+                </div>
+                <div class="input-group">
                     <label for="studentCode">كود الطالب (STU + 3 أرقام)</label>
                     <div style="display: flex; align-items: center;">
                         <span style="padding: 10px; background: #d4af37; color: #1a2526; border-radius: 5px 0 0 5px;">STU</span>
