--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
                 <div class="input-group">
                     <label for="password">كلمة المرور</label>
                     <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
+                    <button onclick="togglePassword()">إظهار/إخفاء كلمة المرور</button>
                 </div>
                 <button type="submit" class="submit-btn">تسجيل الدخول</button>
             </form>
