--- a/chatbot.html
+++ b/chatbot.html
@@ -29,24 +29,12 @@
                 <button class="send-btn">إرسال</button>
             </div>
         </div>
-        <nav class="nav-bar">
-            <a href="index.html" class="nav-item">
-                <span class="nav-icon"><i class="fas fa-door-open"></i></span>
-                <span class="nav-text">ترحيب</span>
-            </a>
-            <a href="Home.html" class="nav-item">
-                <span class="nav-icon"><i class="fas fa-search"></i></span>
-                <span class="nav-text">بحث</span>
-            </a>
-            <a href="profile.html" class="nav-item">
-                <span class="nav-icon"><i class="fas fa-user"></i></span>
-                <span class="nav-text">الملف</span>
-            </a>
-            <a href="chatbot.html" class="nav-item active">
-                <span class="nav-icon"><i class="fas fa-comments"></i></span>
-                <span class="nav-text">دردشة</span>
-            </a>
-        </nav>
+      <nav class="nav-bar" id="nav-bar">
+    <a href="index.html" class="nav-item"><i class="fas fa-home"></i><span class="nav-text">الرئيسية</span></a>
+    <a href="Home.html" class="nav-item"><i class="fas fa-chart-line"></i><span class="nav-text">النتائج</span></a>
+    <a href="profile.html" class="nav-item"><i class="fas fa-user"></i><span class="nav-text">الملف الشخصي</span></a>
+    <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot"></i><span class="nav-text">المساعد الذكي</span></a>
+</nav>
     </div>
     <script src="chatbot.js"></script>
 </body>
