--- a/chatbot.html
+++ b/chatbot.html
@@ -30,10 +30,10 @@
             </div>
         </div>
       <nav class="nav-bar" id="nav-bar">
-    <a href="index.html" class="nav-item"><i class="fas fa-home"></i><span class="nav-text">الرئيسية</span></a>
-    <a href="Home.html" class="nav-item"><i class="fas fa-chart-line"></i><span class="nav-text">النتائج</span></a>
-    <a href="profile.html" class="nav-item"><i class="fas fa-user"></i><span class="nav-text">الملف الشخصي</span></a>
-    <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot"></i><span class="nav-text">المساعد الذكي</span></a>
+    <a href="index.html" class="nav-item"><i class="fas fa-home"></i></a>
+    <a href="Home.html" class="nav-item"><i class="fas fa-chart-line"></i></a>
+    <a href="profile.html" class="nav-item"><i class="fas fa-user"></i></a>
+    <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot"></i></a>
 </nav>
     </div>
     <script src="chatbot.js"></script>
