--- a/chatbot.html
+++ b/chatbot.html
@@ -6,9 +6,10 @@
     <title>المساعد الذكي - معهد رعاية الضبعية</title>
     <link rel="stylesheet" href="chatbot.css">
     <!-- إضافة Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7676282531413677"
-     crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous">
+    <!-- إضافة Toastify -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7676282531413677" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -29,13 +30,14 @@
                 <button class="send-btn">إرسال</button>
             </div>
         </div>
-      <nav class="nav-bar" id="nav-bar">
-    <a href="index.html" class="nav-item"><i class="fas fa-home"></i><span class="nav-text">الرئيسية</span></a>
-    <a href="Home.html" class="nav-item"><i class="fas fa-chart-line"></i><span class="nav-text">النتائج</span></a>
-    <a href="profile.html" class="nav-item"><i class="fas fa-user"></i><span class="nav-text">الملف الشخصي</span></a>
-    <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot"></i><span class="nav-text">المساعد الذكي</span></a>
-</nav>
+        <nav class="nav-bar" id="nav-bar">
+            <a href="index.html" class="nav-item"><i class="fas fa-home" title="الرئيسية"></i></a>
+            <a href="home.html" class="nav-item"><i class="fas fa-chart-line" title="النتائج"></i></a>
+            <a href="profile.html" class="nav-item"><i class="fas fa-user" title="الملف الشخصي"></i></a>
+            <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot" title="المساعد الذكي"></i></a>
+        </nav>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="chatbot.js"></script>
 </body>
 </html>
