--- a/chatbot.html
+++ b/chatbot.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>المساعد الذكي - معهد رعاية الضبعية</title>
     <link rel="stylesheet" href="chatbot.css">
-    <!-- إضافة Font Awesome -->
+    <!-- إضافة Font Awesome (CDN الأساسي) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous">
+    <!-- إضافة Font Awesome (CDN احتياطي) -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css" integrity="sha384-PZ4W1v/2H9W1N0z9Xz/7K2g9X5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5" crossorigin="anonymous" onload="console.log('Backup Font Awesome loaded')" onerror="console.error('Backup Font Awesome failed to load')">
     <!-- إضافة Toastify -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7676282531413677" crossorigin="anonymous"></script>
