--- a/chatbot.html
+++ b/chatbot.html
@@ -5,13 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>المساعد الذكي - معهد رعاية الضبعية</title>
     <link rel="stylesheet" href="chatbot.css">
-    <!-- إضافة Font Awesome (CDN الأساسي) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous">
-    <!-- إضافة Font Awesome (CDN احتياطي) -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css" integrity="sha384-PZ4W1v/2H9W1N0z9Xz/7K2g9X5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5z5" crossorigin="anonymous" onload="console.log('Backup Font Awesome loaded')" onerror="console.error('Backup Font Awesome failed to load')">
-    <!-- إضافة Toastify -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7676282531413677" crossorigin="anonymous"></script>
+    <!-- إضافة Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -32,14 +27,25 @@
                 <button class="send-btn">إرسال</button>
             </div>
         </div>
-        <nav class="nav-bar" id="nav-bar">
-            <a href="index.html" class="nav-item"><i class="fas fa-home" title="الرئيسية"></i></a>
-            <a href="home.html" class="nav-item"><i class="fas fa-chart-line" title="النتائج"></i></a>
-            <a href="profile.html" class="nav-item"><i class="fas fa-user" title="الملف الشخصي"></i></a>
-            <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot" title="المساعد الذكي"></i></a>
+        <nav class="nav-bar">
+            <a href="index.html" class="nav-item">
+                <span class="nav-icon"><i class="fas fa-door-open"></i></span>
+                <span class="nav-text">ترحيب</span>
+            </a>
+            <a href="Home.html" class="nav-item">
+                <span class="nav-icon"><i class="fas fa-search"></i></span>
+                <span class="nav-text">بحث</span>
+            </a>
+            <a href="profile.html" class="nav-item">
+                <span class="nav-icon"><i class="fas fa-user"></i></span>
+                <span class="nav-text">الملف</span>
+            </a>
+            <a href="chatbot.html" class="nav-item active">
+                <span class="nav-icon"><i class="fas fa-comments"></i></span>
+                <span class="nav-text">دردشة</span>
+            </a>
         </nav>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="chatbot.js"></script>
 </body>
 </html>
