--- a/exams.html
+++ b/exams.html
@@ -17,7 +17,7 @@
         <button class="logout-btn" onclick="logout()">تسجيل الخروج</button>
     </header>
     <div class="main-container">
-        <div class="exam-access">
+        <div id="exam-access">
             <h2>الوصول إلى الاختبار</h2>
             <form id="exam-access-form">
                 <div class="input-group">
