--- a/admin.html
+++ b/admin.html
@@ -234,6 +234,10 @@
                 <option value="second">الثانية ثانوي</option>
             </select>
         </div>
+        <div class="input-group">
+    <label for="exam-duration">مدة الاختبار (بالدقائق) <span class="required">*</span></label>
+    <input type="number" id="exam-duration" min="1" placeholder="أدخل مدة الاختبار (مثال: 30)" required>
+</div>
         <div class="question-form">
             <h3>إضافة سؤال</h3>
             <div class="input-group">
