Add timer div to exam container

--- a/exams.html
+++ b/exams.html
@@ -29,6 +29,7 @@
         </div>
         <div id="exam-container" style="display: none;">
             <h2 id="exam-title"></h2>
+            <div id="timer" style="text-align: center; font-size: 1.2em; color: #dc3545; margin-bottom: 20px;"></div>
             <form id="exam-form"></form>
             <button id="submit-exam" class="submit-btn">إرسال الإجابات</button>
         </div>
