--- a/admin.html
+++ b/admin.html
@@ -256,6 +256,15 @@
         <button id="save-exam" class="submit-btn">حفظ الاختبار</button>
     </div>
 </section>
+        <div class="exam-results-section">
+    <h2>نتائج الاختبارات</h2>
+    <div class="input-group">
+        <label for="results-exam-code">كود الاختبار</label>
+        <input type="text" id="results-exam-code" placeholder="أدخل كود الاختبار">
+    </div>
+    <button id="fetch-results" class="submit-btn">عرض النتائج</button>
+    <div id="exam-results-list"></div>
+        </div>
         <!-- إضافة هذا القسم بعد <div id="stats-section" class="stats-section"></div> -->
 <div class="notifications-section">
     <h2>إدارة الإشعارات</h2>
