--- a/public/signup.html
+++ b/public/signup.html
@@ -17,50 +17,74 @@
             <form id="student-signup-form">
                 <div class="input-group">
                     <label for="fullName">الاسم الكامل</label>
-                    <input type="text" id="fullName" name="fullName" required>
+                    <input type="text" id="fullName" name="fullName" placeholder="مثال: أحمد محمد علي" required>
                 </div>
+
                 <div class="input-group">
                     <label for="username">اسم المستخدم</label>
-                    <input type="text" id="username" name="username" required>
-                    <span id="username-availability" style="font-size: 0.8em; color: #dc3545; display: none;"></span>
+                    <input type="text" id="username" name="username" placeholder="3-20 حرف (أحرف وأرقام)" required>
+                    <span id="username-availability" style="font-size: 0.8em; display: none; margin-top: 5px;"></span>
                 </div>
+
                 <div class="input-group">
-                    <label for="studentCode">كود الطالب (STU + 3 أرقام)</label>
+                    <label for="studentCode">كود الطالب</label>
                     <div style="display: flex; align-items: center;">
-                        <span style="padding: 10px; background: #d4af37; color: #1a2526; border-radius: 5px 0 0 5px;">STU</span>
-                        <input type="text" id="studentCode" name="studentCode" pattern="\d{3}" maxlength="3" required style="border-radius: 0 5px 5px 0; flex: 1;">
+                        <span style="padding: 10px 15px; background: #d4af37; color: #1a2526; border-radius: 5px 0 0 5px; font-weight: bold; font-size: 1.1em;">STU</span>
+                        <input 
+                            type="text" 
+                            id="studentCode" 
+                            name="studentCode" 
+                            inputmode="numeric"
+                            maxlength="3" 
+                            placeholder="123"
+                            required 
+                            style="border-radius: 0 5px 5px 0; flex: 1; text-align: center; font-size: 1.1em;"
+                        >
                     </div>
+                    <small style="color: #666; font-size: 0.75em; margin-top: 5px; display: block;">
+                        أدخل آخر 3 أرقام فقط (مثال: 001)
+                    </small>
                 </div>
+
                 <div class="input-group">
                     <label for="email">البريد الإلكتروني</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" placeholder="example@school.com" required>
                 </div>
+
                 <div class="input-group">
                     <label for="phone">رقم الهاتف</label>
-                    <input type="tel" id="phone" name="phone" required>
+                    <input type="tel" id="phone" name="phone" placeholder="01012345678" required>
                 </div>
+
                 <div class="input-group">
                     <label for="birthdate">تاريخ الميلاد</label>
                     <input type="date" id="birthdate" name="birthdate" required>
                 </div>
+
                 <div class="input-group">
                     <label for="address">العنوان</label>
-                    <input type="text" id="address" name="address" required>
+                    <input type="text" id="address" name="address" placeholder="المدينة - الحي - الشارع" required>
                 </div>
+
                 <div class="input-group">
                     <label for="password">كلمة المرور</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" placeholder="أدخل كلمة مرور قوية" required>
                 </div>
+
                 <button type="submit" class="submit-btn">إنشاء الحساب</button>
+
                 <p style="text-align: center; margin-top: 15px;">
                     لديك حساب؟ <a href="login.html" class="signup-link">تسجيل الدخول</a>
                 </p>
             </form>
         </div>
     </div>
+
     <footer>
-        <p>Developed by Ahmed Mousa ❤</p>
+        <p>Developed by Ahmed Mousa [Heart]</p>
     </footer>
+
+    <!-- JS في الأسفل عشان يحمل بعد الـ HTML -->
     <script src="signup.js"></script>
 </body>
 </html>
