--- a/public/login.html
+++ b/public/login.html
@@ -33,11 +33,12 @@
         </div>
     </div>
 
-    <footer>
+<footer>
         <p>Developed by Ahmed Mousa <span class="heart">❤</span></p>
     </footer>
 
-    <script src="crypto-js.js"></script>
+    <!-- تحميل CryptoJS من CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="dataManager.js"></script>
     <script src="auth.js"></script>
 </body>
