--- a/public/signup.html
+++ b/public/signup.html
@@ -81,10 +81,12 @@
     </div>
 
     <footer>
-        <p>Developed by Ahmed Mousa [Heart]</p>
+        <p>Developed by Ahmed Mousa <span class="heart">❤</span></p>
     </footer>
 
-    <!-- JS في الأسفل عشان يحمل بعد الـ HTML -->
+    <!-- تحميل مكتبة التشفير أولًا -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <!-- ثم تحميل signup.js -->
     <script src="signup.js"></script>
 </body>
 </html>
