--- a/public/signup.html
+++ b/public/signup.html
@@ -84,9 +84,21 @@
         <p>Developed by Ahmed Mousa <span class="heart">❤</span></p>
     </footer>
 
-    <!-- تحميل مكتبة التشفير أولًا -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-    <!-- ثم تحميل signup.js -->
-    <script src="signup.js"></script>
+    <!-- الحل النهائي: نفس طريقة login.html بالظبط -->
+    <script>
+        // تحميل CryptoJS أولاً
+        const cryptoScript = document.createElement('script');
+        cryptoScript.src = 'https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js';
+        cryptoScript.onload = function() {
+            console.log('CryptoJS تم تحميله بنجاح في signup.html');
+            // بعد ما يتحمل، نحمل signup.js
+            const signupScript = document.createElement('script');
+            signupScript.src = 'signup.js';
+            signupScript.onload = () => console.log('signup.js تم تحميله بنجاح');
+            document.body.appendChild(signupScript);
+        };
+        cryptoScript.onerror = () => alert('فشل تحميل مكتبة التشفير!');
+        document.body.appendChild(cryptoScript);
+    </script>
 </body>
 </html>
