--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>المساعد الذكي - معهد رعاية الضبعية</title>
     <link rel="stylesheet" href="chatbot.css">
-    <!-- إضافة Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous">
-    <!-- إضافة Toastify -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7676282531413677" crossorigin="anonymous"></script>
 </head>
 <body>
+
     <div class="container">
-        <!-- شريط العنوان -->
-        <div class="chat-header">
+        <!-- الهيدر الملكي -->
+        <header class="chat-header">
             <img src="logo.png" alt="شعار المعهد" class="logo">
-            <h1>المساعد الذكي 🚀</h1>
-            <span class="status-icon">●</span>
-        </div>
-        <!-- منطقة الدردشة -->
-        <div class="chatbot-section">
-            <h3>اسألني أي سؤال!</h3>
-            <div class="chat-window" id="chat-window"></div>
-            <!-- حقل الإدخال وأزرار التحكم -->
+            <h1>المساعد الذكي</h1>
+            <span class="status">متصل <i class="fas fa-circle text-success"></i></span>
+        </header>
+
+        <!-- نافذة الدردشة -->
+        <main class="chat-body">
+            <div class="chat-window" id="chat-window">
+                <div class="welcome-msg">
+                    <div class="bot-message">
+                        مرحبًا بك في المساعد الذكي! كيف يمكنني مساعدتك اليوم؟
+                        <span class="message-time">الآن</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- شريط الإدخال -->
             <div class="chat-input">
                 <input type="text" id="chat-input" placeholder="اكتب سؤالك هنا..." autocomplete="off">
-                <button class="clear-btn" onclick="clearChat()">مسح</button>
-                <button class="send-btn">إرسال</button>
+                <button class="clear-btn" title="مسح المحادثة">
+                    <i class="fas fa-trash"></i>
+                </button>
+                <button class="send-btn" title="إرسال">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
             </div>
-        </div>
-        <nav class="nav-bar" id="nav-bar">
-            <a href="index.html" class="nav-item"><i class="fas fa-home" title="الرئيسية"></i></a>
-            <a href="home.html" class="nav-item"><i class="fas fa-chart-line" title="النتائج"></i></a>
-            <a href="profile.html" class="nav-item"><i class="fas fa-user" title="الملف الشخصي"></i></a>
-            <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot" title="المساعد الذكي"></i></a>
+        </main>
+
+        <!-- النافبار السفلي الأسطوري -->
+        <nav class="nav-bar">
+            <a href="index.html" title="الرئيسية"><i class="fas fa-home"></i></a>
+            <a href="home.html" title="النتائج"><i class="fas fa-chart-line"></i></a>
+            <a href="profile.html" title="الملف الشخصي"><i class="fas fa-user"></i></a>
+            <a href="chatbot.html" class="active"><i class="fas fa-robot"></i></a>
         </nav>
     </div>
+
+    <!-- المكتبات -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="chatbot.js"></script>
 </body>
-</html>
+</html> 
