--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -1,43 +1,405 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>المساعد الذكي - معهد رعاية الضبعية</title>
-    <link rel="stylesheet" href="chatbot.css">
-    <!-- إضافة Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous">
-    <!-- إضافة Toastify -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7676282531413677" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>المساعد الذكي | معهد رعاية الضبعية</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <style>
+        :root {
+            --gold:#c9a552;
+            --gold-dark:#b48b33;
+            --white:#ffffff;
+            --black:#0d0d0d;
+            --soft:#f6f6f6;
+            --gray:#ececec;
+            --text:#333;
+
+            --bg: var(--soft);
+            --text-color: #333;
+            --bubble-user: var(--gold);
+            --bubble-bot: #fff;
+            --nav-bg: #fff;
+            --header-bg: linear-gradient(135deg,var(--gold-dark),var(--gold));
+        }
+
+        body.dark {
+            --bg:#0d0d0d;
+            --text-color:#f7f7f7;
+            --bubble-user:#b48b33;
+            --bubble-bot:#1a1a1a;
+            --nav-bg:#1c1c1c;
+            --header-bg:linear-gradient(135deg,#000,var(--gold-dark));
+        }
+
+        *{margin:0;padding:0;box-sizing:border-box;}
+        body {
+            height:100vh;
+            background:var(--bg);
+            font-family:"Cairo",sans-serif;
+            color:var(--text-color);
+            transition:.3s;
+        }
+        .app{
+            height:100vh;
+            max-width:650px;
+            margin:auto;
+            display:flex;
+            flex-direction:column;
+            background:var(--bg);
+            box-shadow:0 0 20px rgba(0,0,0,.2);
+        }
+
+        header{
+            background:var(--header-bg);
+            padding:18px 10px;
+            text-align:center;
+            color:white;
+            border-bottom-left-radius:25px;
+            border-bottom-right-radius:25px;
+            box-shadow:0 4px 18px rgba(0,0,0,.25);
+            position:relative;
+        }
+
+        #modeToggle{
+            position:absolute;
+            left:20px; top:20px;
+            font-size:1.5rem;
+            color:white;
+            cursor:pointer;
+            transition:.3s;
+        }
+
+        header .logo{
+            width:80px;height:80px;border-radius:50%;
+            border:4px solid #fff;
+            object-fit:cover;
+            box-shadow:0 0 12px #fff;
+        }
+
+        header h1{margin-top:8px;font-size:1.45rem;}
+        header p{opacity:.95;margin-top:5px;font-size:.9rem;}
+        .online{margin-top:6px;font-size:.9rem;}
+        .online i{color:#8affb2;}
+
+        .chat{
+            flex:1;
+            overflow-y:auto;
+            padding:15px 12px 130px;
+            scroll-behavior:smooth;
+        }
+
+        .welcome{
+            background:var(--bubble-bot);
+            padding:22px;
+            border-radius:20px;
+            margin:20px auto;
+            text-align:center;
+            max-width:330px;
+            border:1px solid rgba(201,165,82,0.2);
+        }
+        .welcome h2{color:var(--gold-dark);}
+        .welcome p{margin-top:10px;line-height:1.7;}
+        .welcome small{color:var(--gold);margin-top:10px;display:block;}
+
+        .msg{
+            display:flex;
+            margin-bottom:12px;
+            gap:10px;
+            max-width:80%;
+            animation:fade .4s;
+        }
+        @keyframes fade{from{opacity:0;transform:translateY(10px)}}
+
+        .msg.user{flex-direction:row-reverse;margin-left:auto;}
+        .msg.bot{margin-right:auto;}
+
+        .av{
+            width:45px;height:45px;border-radius:50%;
+            overflow:hidden;border:3px solid var(--gold);
+            flex-shrink:0;
+        }
+        .av img{width:100%;height:100%;object-fit:cover;}
+
+        .b{
+            background:var(--bubble-bot);
+            padding:12px 16px;
+            border-radius:18px;
+            line-height:1.6;
+            color:var(--text-color);
+            border:1px solid rgba(255,255,255,0.1);
+            max-width:100%;
+            word-wrap:break-word;
+        }
+        .msg.user .b{
+            background:var(--bubble-user);
+            color:white;
+            border-bottom-right-radius:6px;
+        }
+        .msg.bot .b{
+            background:var(--bubble-bot);
+            border-bottom-left-radius:6px;
+        }
+
+        .time{font-size:.75rem;margin-top:6px;opacity:.7;text-align:left;}
+
+        .input-bar{
+            position:fixed;
+            bottom:90px;
+            left:50%;
+            transform:translateX(-50%);
+            width:100%;max-width:650px;
+            padding:12px;
+            display:flex;gap:10px;
+            background:var(--nav-bg);
+            border-top:1px solid rgba(0,0,0,0.1);
+           aeli
+            z-index:10;
+        }
+
+        #txt{
+            flex:1;height:52px;border-radius:26px;
+            border:2px solid var(--gold-dark);
+            padding:0 18px;font-size:1rem;
+            background:var(--bg);
+            color:var(--text-color);
+        }
+        #txt:focus{outline:none;border-color:var(--gold);}
+
+        .btn{
+            width:52px;height:52px;border-radius:50%;
+            border:none;color:white;font-size:1.3rem;cursor:pointer;
+            display:flex;align-items:center;justify-content:center;
+        }
+        #voice{background:var(--gold-dark);}
+        #send{background:var(--gold);box-shadow:0 4px 15px rgba(201,165,82,0.4);}
+
+        .suggestions{
+            display:flex;
+            gap:10px;
+            overflow-x:auto;
+            padding:8px 12px;
+            background:var(--nav-bg);
+            border-bottom:1px solid rgba(0,0,0,0.05);
+        }
+        .suggestions div{
+            background:var(--bubble-bot);
+            padding:9px 16px;
+            border-radius:20px;
+            white-space:nowrap;
+            border:1px solid rgba(201,165,82,0.2);
+            cursor:pointer;
+            font-size:0.95rem;
+            transition:0.3s;
+        }
+        .suggestions div:hover{background:var(--gold);color:white;}
+
+        #clearChat{
+            position:absolute;
+            right:20px;top:20px;
+            color:white;font-size:1.3rem;
+            cursor:pointer;
+            opacity:.9;
+        }
+
+        nav{
+            position:fixed;
+            bottom:0;left:50%;
+            transform:translateX(-50%);
+            width:100%;max-width:650px;
+            height:80px;
+            background:var(--nav-bg);
+            display:flex;
+            justify-content:space-around;
+            align-items:center;
+            border-top:1px solid rgba(0,0,0,0.1);
+            box-shadow:0 -4px 15px rgba(0,0,0,0.1);
+        }
+        nav a{
+            color:var(--gold-dark);
+            font-size:1.6rem;
+            padding:10px;
+            border-radius:14px;
+            transition:.3s;
+        }
+        nav a.active{
+            background:var(--gold-dark);
+            color:white;
+            transform:scale(1.15);
+        }
+
+        .typing span{
+            display:inline-block;
+            width:8px;height:8px;
+            margin:0 3px;border-radius:50%;
+            background:var(--gold);
+            animation:jump 1.4s infinite;
+        }
+        .typing span:nth-child(2){animation-delay:.2s}
+        .typing span:nth-child(3){animation-delay:.4s}
+        @keyframes jump{50%{transform:translateY(-10px)}}
+    </style>
 </head>
 <body>
-    <div class="container">
-        <!-- شريط العنوان -->
-        <div class="chat-header">
-            <img src="logo.png" alt="شعار المعهد" class="logo">
-            <h1>المساعد الذكي 🚀</h1>
-            <span class="status-icon">●</span>
+
+<div class="app">
+
+    <header>
+        <i id="modeToggle" class="fa-solid fa-moon"></i>
+        <i id="clearChat" class="fa-solid fa-trash"></i>
+
+        <img src="logo.png" alt="شعار المعهد" class="logo">
+
+        <h1>المساعد الذكي</h1>
+        <p>معهد رعاية الضبعية – التمريض</p>
+        <div class="online"><i class="fa-solid fa-circle"></i> متصل الآن</div>
+    </header>
+
+    <main id="chat" class="chat">
+        <div class="welcome">
+            <h2>مرحباً بكِ</h2>
+            <p>أنا مساعدك الذكي — جاهز لمساعدتك في الأسئلة، الواجبات، الجداول والنتائج.</p>
+            <small>الخصوصية مضمونة بالكامل</small>
         </div>
-        <!-- منطقة الدردشة -->
-        <div class="chatbot-section">
-            <h3>اسألني أي سؤال!</h3>
-            <div class="chat-window" id="chat-window"></div>
-            <!-- حقل الإدخال وأزرار التحكم -->
-            <div class="chat-input">
-                <input type="text" id="chat-input" placeholder="اكتب سؤالك هنا..." autocomplete="off">
-                <button class="clear-btn" onclick="clearChat()">مسح</button>
-                <button class="send-btn">إرسال</button>
-            </div>
-        </div>
-        <nav class="nav-bar" id="nav-bar">
-            <a href="index.html" class="nav-item"><i class="fas fa-home" title="الرئيسية"></i></a>
-            <a href="home.html" class="nav-item"><i class="fas fa-chart-line" title="النتائج"></i></a>
-            <a href="profile.html" class="nav-item"><i class="fas fa-user" title="الملف الشخصي"></i></a>
-            <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot" title="المساعد الذكي"></i></a>
-        </nav>
+    </main>
+
+    <div class="suggestions">
+        <div>ما نتيجة الترم؟</div>
+        <div>جدول الامتحانات</div>
+        <div>ازاي أشوف درجاتي؟</div>
+        <div>كيف أتواصل مع الإدارة؟</div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="chatbot.js"></script>
+
+    <div class="input-bar">
+        <button id="voice" class="btn"><i class="fa-solid fa-microphone"></i></button>
+        <input id="txt" type="text" placeholder="اكتبي سؤالك هنا..." autocomplete="off">
+        <button id="send" class="btn"><i class="fa-solid fa-paper-plane"></i></button>
+    </div>
+
+    <nav>
+        <a href="index.html"><i class="fa-solid fa-house"></i></a>
+        <a href="home.html"><i class="fa-solid fa-graduation-cap"></i></a>
+        <a href="profile.html"><i class="fa-solid fa-user"></i></a>
+        <a href="chatbot.html" class="active"><i class="fa-solid fa-comments"></i></a>
+    </nav>
+
+</div>
+
+<script>
+    // الـ API الجديد مظبوط 100%
+    const API_KEY = 'AIzaSyAzd1a97vHrXC5b6VGoaDRTXiVcWRmfWxA';
+    const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
+
+    const modeToggle = document.getElementById("modeToggle");
+    const clearBtn = document.getElementById("clearChat");
+    const chat = document.getElementById("chat");
+    const input = document.getElementById("txt");
+    const send = document.getElementById("send");
+    const voice = document.getElementById("voice");
+
+    // الأصوات
+    const sendSound = new Audio("https://cdn.pixabay.com/download/audio/2022/03/15/audio_233a3e35a3.mp3?filename=message-133874.mp3");
+    const receiveSound = new Audio("https://cdn.pixabay.com/download/audio/2021/12/22/audio_c16a4c19f1.mp3?filename=bell-58749.mp3");
+
+    // وضع الليل / النهار
+    modeToggle.onclick = () => {
+        document.body.classList.toggle("dark");
+        modeToggle.classList.toggle("fa-sun");
+        modeToggle.classList.toggle("fa-moon");
+    };
+
+    // مسح المحادثة
+    clearBtn.onclick = () => {
+        if(confirm("هل تريد مسح المحادثة بالكامل؟")) {
+            chat.innerHTML = '<div class="welcome"><h2>مرحباً بكِ</h2><p>أنا مساعدك الذكي — جاهز لمساعدتك في الأسئلة، الواجبات، الجداول والنتائج.</p><small>الخصوصية مضمونة بالكامل</small></div>';
+        }
+    };
+
+    // إضافة رسالة
+    function add(text, type) {
+        const box = document.createElement("div");
+        box.className = `msg ${type}`;
+        box.innerHTML = `
+            <div class="av"><img src="${type==="user" ? "Karton.jpeg" : "logo.png"}" alt=""></div>
+            <div class="b">
+                ${text.replace(/\n/g, "<br>")}
+                <div class="time">${new Date().toLocaleTimeString("ar-EG", {hour: "numeric", minute: "2-digit"})}</div>
+            </div>`;
+        chat.appendChild(box);
+        chat.scrollTop = chat.scrollHeight;
+        if(type === "user") sendSound.play();
+        else receiveSound.play();
+    }
+
+    // حالة الكتابة
+    function typing() {
+        const t = document.createElement("div");
+        t.className = "msg bot";
+        t.id = "typing";
+        t.innerHTML = `<div class="b"><div class="typing"><span></span><span></span><span></span></div></div>`;
+        chat.appendChild(t);
+        chat.scrollTop = chat.scrollHeight;
+    }
+
+    // إرسال الرسالة
+    async function sendMsg() {
+        const q = input.value.trim();
+        if (!q) return;
+
+        add(q, "user");
+        input.value = "";
+        typing();
+
+        try {
+            const res = await fetch(`${API_URL}?key=${API_KEY}`, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    contents: [{ role: "user", parts: [{ text: `أنت مساعد لطيف ومحترف لمعهد تمريض. رد بالعربي المصري الخفيف واللطيف: ${q}` }] }]
+                })
+            });
+
+            const data = await res.json();
+            document.getElementById("typing")?.remove();
+
+            const reply = data.candidates?.[0]?.content?.parts?.[0]?.text || "معلش، في مشكلة بسيطة… جربي تاني";
+            add(reply, "bot");
+
+        } catch (err) {
+            document.getElementById("typing")?.remove();
+            add("الإنترنت ضعيف شوية… جربي تاني بعد شوية", "bot");
+        }
+    }
+
+    // الأحداث
+    send.onclick = sendMsg;
+    input.addEventListener("keypress", e => e.key === "Enter" && sendMsg());
+
+    // الاقتراحات السريعة
+    document.querySelectorAll(".suggestions div").forEach(s => {
+        s.onclick = () => {
+            input.value = s.innerText;
+            sendMsg();
+        };
+    });
+
+    // التعرف على الصوت (اختياري)
+    if ("SpeechRecognition" in window || "webkitSpeechRecognition" in window) {
+        const rec = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+        rec.lang = "ar-EG";
+        voice.onclick = () => rec.start();
+        rec.onresult = e => {
+            input.value = e.results[0][0].transcript;
+            sendMsg();
+        };
+    }
+
+    // رسالة ترحيب تلقائية
+    setTimeout(() => add("أهلاً وسهلاً يا أجمل طالبة! ازيك النهاردة؟ عايزة أساعدك في إيه؟", "bot"), 1000);
+</script>
+
 </body>
 </html>
