--- a/chatbot.html
+++ b/chatbot.html
@@ -32,7 +32,7 @@
         </div>
         <nav class="nav-bar" id="nav-bar">
             <a href="index.html" class="nav-item"><i class="fas fa-home" title="الرئيسية"></i></a>
-            <a href="home.html" class="nav-item"><i class="fas fa-chart-line" title="النتائج"></i></a>
+            <a href="Home.html" class="nav-item"><i class="fas fa-chart-line" title="النتائج"></i></a>
             <a href="profile.html" class="nav-item"><i class="fas fa-user" title="الملف الشخصي"></i></a>
             <a href="chatbot.html" class="nav-item active"><i class="fas fa-robot" title="المساعد الذكي"></i></a>
         </nav>
