--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -281,7 +281,7 @@
 
     <nav>
         <a href="index.html"><i class="fa-solid fa-house"></i></a>
-        <a href="home.html"><i class="fa-solid fa-graduation-cap"></i></a>
+        <a href="Home.html"><i class="fa-solid fa-graduation-cap"></i></a>
         <a href="profile.html"><i class="fa-solid fa-user"></i></a>
         <a href="chatbot.html" class="active"><i class="fa-solid fa-comments"></i></a>
     </nav>
@@ -290,7 +290,7 @@
 
 <script>
     // الـ API الجديد مظبوط 100%
-    const API_KEY = 'AIzaSyAzd1a97vHrXC5b6VGoaDRTXiVcWRmfWxA';
+    const API_KEY = 'AIzaSyAD4fT6bwrvyY5RwuN42AXtQ-zq_bcuiaA';
     const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
 
     const modeToggle = document.getElementById("modeToggle");
